Se completo la seccion features

--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,7 @@ a{
     color: white;
     font-size: 32px;
     border-radius: 100px;
+    flex: none;
 }
 
 .service{
@@ -124,4 +125,13 @@ a{
 .service:hover::after{
     opacity: 1;
     top: 0;
+}
+
+/*****************  FEATURES *****************/
+
+.col-img{
+    background-image: url(../img/cover2.jpg);
+    background-position: center;
+    background-size: cover;
+    min-height: 450px;
 }
