--- a/css/style.css
+++ b/css/style.css
@@ -135,3 +135,36 @@ a{
     background-size: cover;
     min-height: 450px;
 }
+
+
+/*****************  PROJECTS *****************/
+
+.project{
+    position: relative;
+    overflow: hidden;
+}
+
+.project .overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(21,20,51,0.8);
+    padding: 30px;
+    display: flex;
+    align-items: flex-end;
+    transition: all 0.4s ease;
+    opacity: 0;
+}
+
+.project image{
+    transition: all 0.4s ease;
+}
+
+.project:hover .overlay{
+    opacity: 1;
+}
+.project:hover img{
+    transform: scale(1.1);
+}
