--- a/css/style.css
+++ b/css/style.css
@@ -168,3 +168,15 @@ a{
 .project:hover img{
     transform: scale(1.1);
 }
+
+
+/*****************  PRICING *****************/
+
+.princing i{
+    font-size: 20px;
+    color: var(--primary);
+}
+
+.princing ul li{
+    margin-top: 8px;
+}
