Se completo la seccion de contacto

--- a/css/style.css
+++ b/css/style.css
@@ -211,3 +211,14 @@ a{
     color: var(--primary);
     background-color: transparent;
 }
+
+/*****************  CONTACT *****************/
+
+form input.form-control{
+    height: 56px;
+}
+form .form-control{
+    border: transparent;
+    border-radius: 0;
+    background-color: rgba(0,0,0,0.02);
+}
